# fowin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: check.yml  test.yml
crates/fowin-test/: Cargo.toml  README.md  build.rs
crates/fowin-test-executor/: Cargo.toml
crates/fowin-test-executor/src/: main.rs
crates/fowin-test-lib/: Cargo.toml
crates/fowin-test-lib/src/: chronology.rs  executor.rs  lib.rs  operation.rs  process.rs  state.rs  timeline.rs
crates/fowin-test-lib/src/executor/: binary_executor.rs  fowin_executor.rs  mod.rs  winit_executor.rs
crates/fowin-test-process/: Cargo.toml
crates/fowin-test-process/src/: main.rs
crates/fowin-test/src/: constraint.rs  executor.rs  generator.rs  main.rs  operation.rs  state.rs
crates/screen/: Cargo.toml  README.md
crates/screen/src/: lib.rs  macos.rs
examples/: iter_windows.rs  watch_windows.rs
src/: lib.rs  protocol.rs
src/protocol/: mod.rs  window.rs
src/sys/: mod.rs
src/sys/macos/: application.rs  ffi.rs  ffi2.rs  mod.rs  window.rs  workspace.rs
src/sys/windows/: mod.rs  window.rs
tests/: foobar.rs  operation.rs  window_read.rs  window_write.rs
tests/common/: mod.rs
