[package]
name = "fowin"
version = "0.1.0"
authors = ["ok-nick <nick.libraries@gmail.com>"]
edition = "2021"
license = "MIT"

[workspace]
members = [".", "crates/*"]

[target.'cfg(target_os = "windows")'.dependencies]
flume = "0.11.0"
windows-interface = "0.56.0"
windows-sys = { version = "0.52.0", features = [
  "Win32",
  "Win32_UI",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.1"
objc2-app-kit = { version = "0.2.0", features = [
  "NSRunningApplication",
  "NSWorkspace",
] }
objc2-foundation = { version = "0.2.0", features = [
  "NSString",
  "NSDictionary",
  "NSKeyValueObserving",
  "NSGeometry",
  "NSEnumerator",
] }
