[package]
name = "fowin"
version = "0.1.0"
authors = ["ok-nick <nick.libraries@gmail.com>"]
description = """
a cross-platform foreign window handling library
"""
repository = "https://github.com/ok-nick/fowin"
edition = "2021"
license = "MIT"

[workspace]
members = [".", "crates/*"]

[target.'cfg(target_os = "windows")'.dependencies]
flume = "0.11.0"
windows-interface = "0.56.0"
windows-sys = { version = "0.52.0", features = [
    "Win32",
    "Win32_UI",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.176"
objc2 = "0.6.2"
# objc2-application-services = { version = "0.3.1", default-features = false, features = [
#     "AXError",
#     "HIServices",
# ] }
objc2-application-services = "0.3.1"
objc2-core-foundation = "0.3.1"
objc2-app-kit = { version = "0.3.1", features = [
    "NSRunningApplication",
    "NSWorkspace",
    "libc",
] }
objc2-foundation = { version = "0.3.1", features = [
    "NSString",
    "NSDictionary",
    "NSKeyValueObserving",
    "NSGeometry",
    "NSEnumerator",
] }

[dev-dependencies]
fowin-test-lib = { path = "crates/fowin-test-lib" }
libtest-mimic-collect = "0.3.2"

[[test]]
name = "operation"
path = "tests/operation.rs"
harness = false
