[package]
name = "fowin"
version = "0.1.0"
authors = ["ok-nick <nick.libraries@gmail.com>"]
description = """
a cross-platform foreign window handling library
"""
repository = "https://github.com/ok-nick/fowin"
edition = "2021"
license = "MIT"

[workspace]
members = [".", "crates/*"]

[target.'cfg(target_os = "windows")'.dependencies]
flume = "0.11.0"
windows-interface = "0.56.0"
windows-sys = { version = "0.52.0", features = [
  "Win32",
  "Win32_UI",
  "Win32_Foundation",
  "Win32_System",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.176"
objc2 = "0.6.3"
objc2-application-services = { version = "0.3.2", default-features = false, features = [
  "AXError",
  "AXUIElement",
  "AXValue",
  "HIServices",
  "libc",
  "std",
] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
  "CFNumber",
  "CFString",
  "std",
] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
  "NSRunningApplication",
  "NSWorkspace",
  "libc",
  "std",
] }
objc2-foundation = { version = "0.3.2", features = [
  "NSString",
  "NSDictionary",
  "NSKeyValueObserving",
  "NSGeometry",
  "NSEnumerator",
  "std",
] }

[dev-dependencies]
fowin-test-lib = { path = "crates/fowin-test-lib" }
libtest-mimic-collect = "0.3.2"
env_logger = "0.11.8"

[[test]]
name = "window_read"
path = "tests/window_read.rs"
harness = false

[[test]]
name = "window_write"
path = "tests/window_write.rs"
harness = false
