[package]
name = "fowin-test-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
fowin = { path = "../../" }
winit = { version = "0.30.12", optional = true }
interprocess = { version = "2.2.1", optional = true }
# TODO: can use something like rkyv instead
serde = { version = "1.0.204", features = ["derive"] } # TODO: make optional
serde_json = { version = "1.0.121", optional = true }

[features]
default = ["winit_executor"]
winit_executor = ["winit"]
binary_executor = ["serde_json", "interprocess"]
